--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     border: 2px solid whitesmoke;
 }
 
-headers{
+h1{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 50px;
     text-align: center;
@@ -13,10 +13,12 @@ headers{
 }
 
 .logo {
-    margin: 20px 0px 20px 0px;
-    width:50px;
-    height:auto;
-    vertical-align: left;
+    justify-content: center;
+    /* margin: 10px 10px 10px 10px; */
+    width: 25%;
+    /* height:auto; */
+    /* vertical-align: top; */
+    
 }
 
 #denver-list {
@@ -44,7 +46,8 @@ headers{
 
 #category-info img {
     filter: drop-shadow(1 1 2rem gold);
-    margin: 10px;
+    margin: 5%;
+    width: 20%;
     height: auto;
 }
 
@@ -61,20 +64,23 @@ headers{
 }
 
 #comment {
-    display: grid;
-    justify-content: center;
-    padding: 10px;
-    background-color: beige;
-    font-size: 12px;
+    justify-content: left;
+    padding-left: 50px;
+    background-color: grey;
+    font-size: 16px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    box-sizing:  border-box;
+    height: 50px;
+    -webkit-box-sizing:   border-box;
 }
+
+
 form {
-    width: 100px;
+    padding: 0px;
+    height: auto;
 }
 
 footer p {
-    color: palegoldenrod;
+    color: gold;
     font-size: 14px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
