--- a/style.css
+++ b/style.css
@@ -11,18 +11,18 @@ body{
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
     gap: 1em;
-
+    /* position:absolute; */
 }
 h1{
     display: flex;
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
-    font-size: 80px;
+    font-size: 65px;
     font: bold;
     text-align: center;
     /* text-shadow: 5px 5px 12px black; */
     -webkit-text-fill-color: goldenrod;
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: goldenrod;
     vertical-align: text-top;
     padding-left: 5px;
@@ -38,18 +38,23 @@ h1{
     height: 100px;
    }
 .nav{
-    font-size: 60px;
+    font-size: 55px;
+    font-weight: 500px;
     display: flex;
-    padding-left: 220px;
-    padding-right: 220px;
+    padding-left: 300px;
+    padding-right: 300px;
     padding-top: 0;
     justify-content: space-between;
-    text-align: center;  
+    text-align: center;
+    -webkit-text-fill-color: silver;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: silver;
 }
 .nav img{
     height: 240px;
-    border: 5px solid white;
+    border: 5px solid silver;
     border-radius: 60px;
+    border-style:outset;
     padding-top: 0;
     width: 350px
 }
@@ -59,27 +64,60 @@ h1{
     justify-content: center;
 }
 
-#denver-list img {
+/* MOUSEOVER EVENT HAPPENS HERE */
+
+.noColor {
     width: 150px;
     height: auto;
     margin: 68px 106px;
+    border: 5px dashed silver;
+    border-radius: 20px;
+    border-style:outset;
 }
 
-#denver-list img:hover {
-    filter: drop-shadow(1 1 2rem white);
+.Color {
+    width: 200px;
+    height: auto;
+    margin: 68px 106px;
+    border: 5px dashed rgb(216, 74, 22);
+    border-radius: 20px;
+    border-style:double;
 }
+
+/* #denver-list img:hover {
+    filter: drop-shadow(1 1 2rem silver);
+} */
 
 #category-info {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    width: 1500px;
+    margin-left: 25px;
+    margin-bottom: 50px;
+    /* justify-content: space-evenly;
     align-items: flex-start;
     height: 400px;
     margin-top: 25px;
-    align-content: left;
+    align-content: left; */
 }
 
-#category-info img {
+.category{
+    text-transform:uppercase;
+    font-size: 36px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-bottom: 5px;
+}
+
+#description{
+    font-size: 24px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#h2name{
+    text-transform:capitalize;
+    font-size: 30px;
+}
+/* #category-info img {
     filter: drop-shadow(1 1 2rem gold);
     margin: 5%;
     width: 20%;
@@ -96,16 +134,15 @@ h1{
 
 #category-info div p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-size: 48px;
+} */
 
-#comment h2{
+
+#comment{
     display: flex;
-    justify-content: left;
-    padding: 20px;
-    font-size: 24px;
-    font: italic;
-    height: 50px;
-    /* -webkit-box-sizing: content-box; */
+    margin-left: 25px;
+    flex-direction: column;
+    
 }
 
 
@@ -118,7 +155,7 @@ h1{
 }
 
 footer p {
-    color: gold;
+    color: goldenrod;
     font-size: 14px;
     font-family:Georgia, 'Times New Roman', Times, serif
 }
