--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ h1{
     font-size: 65px;
     font: bold;
     text-align: center;
-    /* text-shadow: 5px 5px 12px black; */
-    -webkit-text-fill-color: goldenrod;
-    -webkit-text-stroke-width: 2px;
+    text-shadow: 5px 5px 12px silver;
+    -webkit-text-fill-color:transparent;
+    -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: goldenrod;
     vertical-align: text-top;
     padding-left: 5px;
